# Personal-Conductor

./: .gitignore  CHANGES.md  Cargo.toml  README.md  README.zh-CN.md  dev.ps1  package-lock.json  package.json  start-dev.bat  workspace-scan-report-20260605.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .eslintignore  .eslintrc.json  chat.html  index.html  package-lock.json  package.json  settings.html  tasks.html  tsconfig.json  vite.config.ts  workbench.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.msi.conf.json  tauri.nsis.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/live2d/qipao/: QipaoGirl.cmo3  transplant_hiyori_assets.py
apps/desktop/src-tauri/src/: commands.rs  cursor.rs  dev_server.rs  error.rs  main.rs  tray.rs  window_state.rs  worker.rs
crates/conductor-cli/: Cargo.toml
crates/conductor-cli/src/: agent_run.rs  main.rs
crates/conductor-core/: Cargo.toml
crates/conductor-core/examples/: agent_team_goal_route_smoke.rs  agent_team_mailbox_smoke.rs  agent_team_tool_smoke.rs  runtime_goal_smoke.rs  workspace_projection_smoke.rs
crates/conductor-core/migrations/: 0001_init.sql  0002_memory_rebuild.sql
crates/conductor-core/src/: affection.rs  agent_backends.rs  agent_messages.rs  agent_runs.rs  agent_team_members.rs  agent_teams.rs  app_state.rs  avatar.rs  chat_parser.rs  codex.rs  command_runs.rs  config.rs  db.rs  embedding.rs  events.rs  expression.rs  feishu.rs  filewatch.rs  goal_hints.rs  goal_tasks.rs  goals.rs  heartbeat.rs  initiative.rs  inject.rs  leases.rs  lib.rs  llm.rs  llm_profiles.rs  lock.rs  mcp.rs  memory.rs  model_resolver.rs  music.rs  pacer.rs  paths.rs  permissions.rs  persona.rs  policy.rs  projection.rs  proposals.rs  (+15 more)
crates/conductor-core/src/adapters/: agent_team_adapter.rs  claude_p.rs  codex_adapter.rs  mod.rs  review_agent.rs
crates/conductor-core/src/chat/: active_run.rs  commands.rs  db.rs  handler.rs  mod.rs  prompt.rs  send_v2.rs  session.rs  tests.rs  tools.rs  turns.rs  types.rs  util.rs
crates/conductor-core/src/connectors/: lark.rs  mod.rs
crates/conductor-core/src/goal_orchestrator/: act.rs  contracts.rs  decide.rs  dispatch.rs  mod.rs  observe.rs  orient.rs  review.rs
crates/conductor-core/src/shell/: bash_provider.rs  cmd_provider.rs  mod.rs  ps_provider.rs  security.rs
crates/conductor-core/src/tools/: agent.rs  codex.rs  fs.rs  mcp.rs  memory.rs  misc.rs  mod.rs  office.rs  registry.rs  shell.rs  task.rs
crates/conductor-sense/: Cargo.toml
crates/model-router-core/: Cargo.toml
crates/model-router-mcp/: Cargo.toml
crates/model-router-mcp/src/: lib.rs  main.rs
docs/: AgentTeam综合评审-20260529.md  Agent场景状态机现状差距与整改问题-20260531.md  Agent状态机收口-评审与派工方案-20260531.md  BEYOND_CAIRN_PHILOSOPHY.md  Bug说明-Goal会话双Working与任务结果插位-20260601.md  Cairn架构对位与移植评估-20260604.md  Chat与Goal链路修正阶段总结-20260602.md  Graph快照-与最近工具调用-审查-20260606.md  Harness架构审查与演进计划-20260529.md  Hook支持类型与任务线映射计划-20260521.md  HybridModel与Cairn融合方案-20260604.md  INDEX.md  LLM工具与多Agent执行状态机模型-20260531.md  MVP-实施方案.md  NSIS-与-WiX-MSI-并行打包-执行文档-20260606.md  PRD.md  PROJECT_EVOLUTION_REPORT.md  Rust 前置准备.md  SPEC-功能增强-20260519.md  STATE_IMPACT_CARD_TEMPLATE.md  STATE_MODEL_AGENT.md  Skill导入与工具接入层方案-20260530.md  UnifiedFinalEvolution-20260604.md  UnifiedFinalEvolution-goal-task-flow-dispatch-20260605.md  UnifiedFinalEvolution-非前端落地路线审阅-20260606.md  UnifiedFinalEvolution落地交接-20260605.md  UnifiedFinalEvolution落地状态评估-20260605.md  chat-turn-bus-state-model-20260603.md  chat-turn-implementation-audit-20260603.md  chat-turn-line-contract-20260603.md  chat-turn-schema-migration-and-interfaces-20260603.md  chat-turn-state-and-memory-design-20260603.md  claude-code-porting-mapping.md  hybrid-model-dispatch-inproject-plan-20260604.md  hybrid-model-dispatch-mcpserver-plan-20260604.md  project-evolution-roadmap.md  workspace-scan-report-20260605.md  workspace.md  交接文档-20260606.md  交接文档-桌宠工具能力与记忆工作区-20260526.md  (+32 more)
docs/legacy-docs/: Live2D-Cubism操作清单-MVP版.md  Live2D-Qipao动作迁移与自动化边界整合.md  Live2D-个人推进清单.md  (+2 more)
release/: GITHUB_RELEASE_NOTES-v0.1.1.md  INDEX.md  README-内测启动.md  RELEASE_CHECKLIST-v0.1.1.md  启动 Personal Conductor.cmd  打包清单.md  路线索引-20260527.md
scripts/: _common-build.ps1  accept-codex-hook.ps1  accept-round1-stop-hook.ps1  accept-round2-desktop-build.ps1  accept-round3-injection.ps1  analyze_cursor_tracking.py  build-msi.ps1  build-nsis.ps1  check_docs_tasks.py  enhance_red_stamp.py  extract_red_stamp.py  fix-rembg-pymatting-metadata.ps1  goal_executor.py  package-portable.ps1  prepare-release-assets.ps1  remove_connected_background.py  reset-release-state.ps1  restart-desktop-dev.ps1  run-rembg-isnet-anime-batch.ps1  run-rembg-isnet-anime.ps1  sign-msi.ps1  start-rembg-isnet-anime-background.ps1  watch_changes.sh
(+112 files in other folders)
