[package]
name = "conductor-cli"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
conductor-core = { path = "../conductor-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
