[package]
name = "conductor-core"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
tauri-events = ["tauri"]
test-utils = ["tempfile"]

[dependencies]
model-router-core = { path = "../../crates/model-router-core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
fs4.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "process", "sync", "time"] }
reqwest = { workspace = true }
axum = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid.workspace = true
walkdir.workspace = true
glob.workspace = true
tracing.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde_yaml = "0.9"
tempfile = { workspace = true, optional = true }
fastembed = "4"
tauri = { workspace = true, optional = true }

[dev-dependencies]
filetime.workspace = true
tempfile.workspace = true
