[package]
name = "model-router-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "model-router-mcp"
path = "src/main.rs"

[dependencies]
model-router-core = { path = "../model-router-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
