[package]
name = "conductor-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata]

[package.metadata.tauri-winres]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
conductor-core = { path = "../../../crates/conductor-core", features = ["tauri-events"] }
conductor-sense = { path = "../../../crates/conductor-sense" }
lazy_static.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tauri.workspace = true
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true
tracing.workspace = true
windows.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
